<resources>
    <string name="app_name">MovieOne</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="overview">Plot Synopsis</string>
    <string name="vote_average">Vote Average</string>
    <string name="of">of</string>
    <string name="page_no">1</string>
    <string name="placeHolder_text_title">Android Lollipop</string>
    <string name="placeHolder_text_year">2015</string>
    <string name="rating">Rating</string>
    <string name="placeHolder_text_vote">(300)</string>
    <string name="placeHolder_text_rating">4.0</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="top_rated">Top Rated</string>
</resources>
