<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.movieone.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about_app"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_by">

        <menu>
            <item
                android:id="@+id/action_sort_popular"
                android:title="@string/popularity"/>
            <item
                android:id="@+id/action_sort_top_rated"
                android:title="@string/top_rated"/>

            </menu>
    </item>
</menu>
